# cookie-python

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  cookiecutter.json  main.py  pyproject.toml  pytest.ini  setup  setup.cfg  setup.py  tox.ini
.github/workflows/: cd.yml  ci.yml
.github/workflows/actions/python-poetry/: action.yml
cookie_python/: main.py  new.py
cookie_python/manage/: github.py  main.py  release.py  repo.py  update.py
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  readme_utils.py  test_cookiecutter.py  test_manage_cookie.py  test_new_cookie.py  test_template.py
tests/data/: readme-github_user_only.md  readme-github_user_with_container.md  readme-github_user_with_coverage.md  readme-github_user_with_coverage_and_container.md  readme-github_user_with_coverage_and_pypi.md  readme-github_user_with_coverage_pypi_and_container.md  readme-github_user_with_pypi.md  readme-github_user_with_pypi_and_container.md  readme-no_github_user.md  readme-no_github_user_container_enabled.md  readme-no_github_user_coverage_enabled.md  readme-no_github_user_pypi_enabled.md  readme-no_github_user_pypi_enabled_container_enabled.md
types/: semver.pyi
{{cookiecutter.project_name}}/: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.project_name}}/.github/workflows/: cd.yml  ci.yml  container.yml
{{cookiecutter.project_name}}/.github/workflows/actions/python-poetry/: action.yml
{{cookiecutter.project_name}}/cookiecutter_template_data/: feature_paths.yml
{{cookiecutter.project_name}}/cookiecutter_template_data/licenses/: BSD-3-Clause  MIT
{{cookiecutter.project_name}}/docker/: entrypoint
{{cookiecutter.project_name}}/tests/: test_main.py  test_module.py
