[build-system]
requires = ["poetry-core>=1.2.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cookie-python"
version = "0.1.2-post.141+d24fca9"
description = ""
license = "MIT"
authors = ["Stephen Kent <smkent@smkent.net>"]
readme = "README.md"
repository = "https://github.com/smkent/cookie-python"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
packages = [
    { include = "{{cookiecutter.project_name}}" }
]

[tool.poetry.dependencies]
python = "^3.8"
poetry-dynamic-versioning = "^0.13.1"
pyyaml = "*"

[tool.poetry.dev-dependencies]
bandit = {extras = ["toml"], version = "*"}
black = "*"
build = "*"
cruft = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-pyproject = "*"
flake8-simplify = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
poethepoet = "*"
pre-commit = "*"
py = "1.11.0"  # https://github.com/Teemu/pytest-sugar/issues/241
pytest = "*"
pytest-cookies = "*"
pytest-cov = "*"
pytest-github-actions-annotate-failures = "*"
pytest-sugar = "*"
types-PyYAML = "*"

[tool.poetry.scripts]
new-cookie = "cookie_python.main:main"

[tool.poetry-dynamic-versioning]
enable = false
vcs = "git"
style = "semver"

[tool.poe.tasks.lint]
cmd = "pre-commit run --all-files --show-diff-on-failure"
help = "Check all files"

[tool.poe.tasks.pytest]
cmd = "pytest"
help = "Run unit tests with pytest"

[tool.poe.tasks.test]
sequence = ["lint", "pytest"]
help = "Run all tests"

[tool.poe.tasks.create]
cmd = "new-cookie"
help = "Create new project from cookie-python template"

[tool.poe.tasks.updatetests]
cmd = "pytest --update-expected-outputs"
help = "Update test expected output files from test results"

[tool.bandit]
skips = [
    "B101",  # assert_used
    "B404",  # blacklist_subprocess
    "B603",  # subprocess_without_shell_equals_true
    "B607",  # start_process_with_partial_path
]

[tool.black]
line-length = 79

[tool.flake8]
exclude = "./.*,./{{cookiecutter.project_name}}"

[tool.isort]
atomic = true
profile = "black"
line_length = 79

[tool.mypy]
files = ["tests"]
mypy_path = "types"
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--junitxml=.pytest_results.xml"

# vim: ft=cfg
