[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[project]
name = "{{ cookiecutter.project_name }}"
description = "{{ cookiecutter.project_description|replace('"', '\\\"') }}"
license = "{{ cookiecutter.project_license }}"
authors = [ { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" } ]
readme = "README.md"{% if cookiecutter.github_user %}
repository = "https://github.com/{{ cookiecutter.github_user }}/{{ cookiecutter.project_name }}"{% endif %}
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10,<4.0"
dynamic = [ "version" ]
dependencies = [
]

[project.scripts]

[tool.poetry]
requires-poetry = ">=2.0"
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry.group.dev.dependencies]
bandit = {extras = ["toml"], version = "*"}
cruft = "*"
mypy = "*"
poethepoet = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-github-actions-annotate-failures = "*"
pytest-sugar = "*"
ruff = "*"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poe.tasks.lint]
cmd = "pre-commit run --all-files --show-diff-on-failure"
help = "Check all files"

[tool.poe.tasks.pytest]
cmd = "pytest"
help = "Run unit tests with pytest"

[tool.poe.tasks.test]
sequence = ["lint", "pytest"]
help = "Run all tests"

[tool.bandit]
skips = ["B101"]  # assert_used

[tool.coverage.run]
source = ["{{ cookiecutter.project_slug }}"]

[tool.coverage.report]
fail_under = 0
show_missing = true

[tool.cruft]
skip = [".git"]

[tool.mypy]
files = [ "tests", "{{ cookiecutter.project_slug }}" ]
mypy_path = "types"
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.pytest]
testpaths = ['tests']
addopts = [
    "--cov",
    "--cov-append",
    "--cov-report=term",
    "--cov-report=xml:.pytest_coverage.xml",
    "--junitxml=.pytest_results.xml",
]

[tool.ruff]
target-version = "py310"
line-length = 79
fix = true

exclude = [
  ".git",
  ".venv",
  "__pycache__",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
  "E", "W",     # pycodestyle
  "F",          # pyflakes
  "I",          # isort
  "B",          # bugbear
  "SIM",        # flake8-simplify
  "N",          # pep8-naming
  "UP",         # pyupgrade
]

# vim: ft=cfg
